First web page with bacon

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<html>
+  <head><title>IT105 Web Project</title></head>
+  <body>
+    <p>
+    <h1>We Love HMTL</h1>
+    <p>
+      <b>Bacon</b> Bacon ipsum dolor amet buffalo filet mignon ball tip frankfurter boudin. Andouille short loin landjaeger swine rump, shoulder frankfurter pork belly cow alcatra chicken salami picanha kielbasa shank. Tongue meatloaf alcatra, drumstick capicola turducken pork loin corned beef leberkas filet mignon burgdoggen short loin pastrami. Kevin tongue chislic t-bone pancetta pork turducken alcatra. Venison spare ribs short loin pork belly. Andouille sirloin sausage ham hock ground round swine landjaeger pork belly pastrami burgdoggen ribeye biltong chuck tri-tip meatloaf. Ham hock pork pork loin shank, pastrami andouille cupim.
+    </p> 
+    </p>
+  </body>
+</html>
