--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </tbody>
       </table>
     </p>
+    <img src="penguin.jpg" alt="An image of many penguins in their natural area"/>
     </p>
   </body>
 </html>
