--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
             <td>data two</td>
             <td>data three</td>
           </tr>
+          <tr>
+             <td>data one</td>
+            <td>data two</td>
+            <td>data three</td>
+          </tr>
         </tbody>
       </table>
     </p>
