--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </tbody>
       </table>
     </p>
-    <img src="penguin.jpg" alt="An image of many penguins in their natural area"/>
+   <td><img width="400" src="penguin.jpg" alt="An image of many penguins in their natural area"/></td>
     </p>
   </body>
 </html>
